--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@ body {
         <a class ="active" href="about.html">About</a>
         <a href="contactme.html">Contact me</a>
         <a href="gallery.html">Gallery</a>
+           <a href="feedback.html">Feedback</a>
     </div>
     <h1>About coding</h1>
      <br>
