--- a/contactme.html
+++ b/contactme.html
@@ -37,6 +37,7 @@ body {
         <a href="about.html">About</a>
         <a class ="active" href="contactme.html">Contact me</a>
         <a href="gallery.html">Gallery</a>
+           <a href="feedback.html">Feedback</a>
     </div>
     <h1>Contact me</h1>
     <br>
