--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,7 @@ body {
         <a href="about.html">About</a>
         <a href="contactme.html">Contact me</a>
         <a class ="active" href="gallery.html">Gallery</a>
+           <a href="feedback.html">Feedback</a>
     </div>
     <h1>Coding Gallery</h1>
     <br>
