--- a/index.html
+++ b/index.html
@@ -32,13 +32,18 @@ body {
 </style>
 </head>
 <body>
-    
     <div class="topnav">
-        <a class="active" href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contactme.html">Contact me</a>
-        <a href="gallery.html">Gallery</a>
-    </div>
+    <a class="active" href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contactme.html">Contact Me</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="feedback.html">Feedback</a>
+</div>
+
     <h1>Home</h1>
+    <br>
+    <b>
+This is a small coding website dedicated to making programming accessible and enjoyable for everyone. Whether you are a complete beginner taking your first steps into the world of code or an experienced developer looking to brush up on specific skills, this platform offers resources tailored to your needs. Explore interactive tutorials, practice coding challenges, and discover a supportive community where you can learn, share, and grow your coding abilities. Embrace the journey of learning to code and unlock new possibilities.
+</b>
 </body>
 </html>
